--- a/www/apps/resources/app/deployment/medusa-application/railway/page.mdx
+++ b/www/apps/resources/app/deployment/medusa-application/railway/page.mdx
@@ -286,7 +286,7 @@ In Railway, add / modify the following environment variables for the Medusa appl
 ```bash
 ADMIN_CORS= # MEDUSA APPLICATION URL
 AUTH_CORS= # ADD MEDUSA APPLICATION URL
-MEDUSA_BACKEND_URL= # MEDUSA APPLICATION URL
+MEDUSA_BACKEND_URL=https://${{RAILWAY_PUBLIC_DOMAIN}}
 ```
 
 Where you set the value of `ADMIN_CORS` and `MEDUSA_BACKEND_URL` to the Medusa application’s URL you got from the previous step, and you add the URL to `AUTH_CORS`.
