--- a/packages/admin/dashboard/src/i18n/translations/en.json
+++ b/packages/admin/dashboard/src/i18n/translations/en.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./$schema.json",
   "general": {
+    "ascending": "Ascending",
     "descending": "Descending",
     "add": "Add",
     "start": "Start",
@@ -379,11 +380,6 @@
     "list": {
       "noRecordsMessage": "Create your first product to start selling."
     },
-    "edit": {
-      "header": "Edit Product",
-      "description": "Edit the product details.",
-      "successToast": "Product {{title}} was successfully updated."
-    },
     "create": {
       "header": "General",
       "tabs": {
@@ -466,6 +462,7 @@
     "deleteWarning": "You are about to delete the product {{title}}. This action cannot be undone.",
     "variants": "Variants",
     "attributes": "Attributes",
+    "editProduct": "Edit Product",
     "editAttributes": "Edit Attributes",
     "editOptions": "Edit Options",
     "editPrices": "Edit prices",
